syntax = "proto3";

option go_package = "discord/gen/proto/schema";
package protoschema;

import "schema/user.proto";
message Friend {
  int32 id = 1;
  int32 user_id = 2;
  int32 friend_id = 3;
  bool is_accepted = 4;
  bool is_blocked = 5;
  bool is_favorite = 6;
  bool is_rejected = 7;
  bool is_pending = 8;
  string status = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
  optional string  alias_name = 12;
  protoschema.User user = 13;
}
